[package]
name = "no-std-embassy-mqtt-stepper-led"
version = "0.1.0"
authors = ["ThomasBoom89"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.15.0", features = [
    "esp32c6",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.23.1", features = ["esp32c6"] }
esp-println = { version = "0.13.0", features = ["esp32c6", "log"] }

#esp-hal-smartled = { version = "0.14.0", features = ["esp32c6"] }
esp-hal-smartled = { git = "https://github.com/ThomasBoom89/esp-hal-community.git", branch = "v0.23.1", features = ["esp32c6"] }
smart-leds = "0.4.0"

esp-wifi = { version = "0.12.0", features = ["esp32c6", "esp-alloc", "wifi", "utils"] }
smoltcp = { version = "0.12.0", default-features = false, features = ["proto-ipv4"] }
esp-alloc = "0.6.0"
heapless = "0.8.0"
#rust-mqtt = { version = "0.3.0", default-features = false}
rust-mqtt = { git = "https://github.com/ThomasBoom89/rust-mqtt.git", branch = "receive-message-when-ready", default-features = false }
embassy-net = { version = "0.6.0", features = ["tcp", "dhcpv4"] }
embassy-futures = { version = "0.1.1" }
embassy-sync = { version = "0.6.2" }
esp-hal-embassy = { version = "0.6.0", features = ["esp32c6"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-81920"] }
embassy-time = "0.4.0"
static_cell = "2.1.0"
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"
[features]
esp32c6 = ["esp-hal/esp32c6", "esp-println/esp32c6", "esp-wifi/esp32c6", "esp-hal-embassy/esp32c6"]
[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
target = "riscv32"